# autonomy_stack_go2

./: README.md  TODO.md  imu_calib_data.yaml  launch_common.sh  real.sh  real_no_rviz.sh  real_route.sh  real_route_no_rviz.sh  real_route_rviz.sh  real_route_web_gui.sh  real_rviz.sh  sim.sh  sim_route.sh  sim_route_web_gui.sh  system_real_robot.sh  system_real_robot_no_rviz.sh  system_real_robot_rviz_only.sh  system_real_robot_with_route_planner.sh  system_real_robot_with_route_planner_no_rviz.sh  system_real_robot_with_route_planner_rviz_only.sh  system_simulation.sh  system_simulation_multilevel_garage.sh  system_simulation_with_route_planner.sh  topic_visualizer.py  unitree_setup.sh
docs/: 00_system_overview.md  01_slam_point_lio_unilidar.md  02_base_autonomy_local_planner.md  03_base_autonomy_terrain_analysis.md  04_base_autonomy_other_packages.md  05_route_planner.md  06_utilities.md  stack_overview.md
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/stairs_autonomy/: package.xml  setup.cfg  setup.py
src/base_autonomy/stairs_autonomy/stairs_autonomy/: motion_executor.py  stair_detector_lidar_imu.py  stair_supervisor.py
src/base_autonomy/terrain_analysis/: README.md
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/base_autonomy/vehicle_simulator/launch/: system_real_robot.launch  system_real_robot_with_route_planner.launch  system_simulation.launch  system_simulation_with_route_planner.launch
src/route_planner/boundary_handler/rviz/: default.rviz
src/route_planner/far_planner/config/: default.yaml  multilevel.yaml
src/route_planner/far_planner/launch/: far_planner.launch
src/route_planner/far_planner/rviz/: default.rviz  matterport.rviz
src/route_planner/far_planner/src/: far_planner.cpp  graph_msger.cpp  planner_visualizer.cpp
src/utilities/far_web_gui/: CMakeLists.txt  package.xml
src/utilities/far_web_gui/launch/: far_web_gui.launch.py
src/utilities/far_web_gui/scripts/: graph_file_bridge.py
src/utilities/far_web_gui/www/: app.js  index.html  roslib_shim.js  style.css
(+11 files in other folders)
